-- SQL dump generated using DBML (dbml.dbdiagram.io)
-- Database: PostgreSQL
-- Generated at: 2025-10-15T15:46:07.629Z

CREATE SCHEMA "yern";

CREATE TYPE "yern"."resource_type" AS ENUM (
  'SECTION',
  'FILE',
  'PATTERN'
);

CREATE TYPE "yern"."role_type" AS ENUM (
  'OWNER',
  'EDITOR',
  'READER'
);

CREATE TYPE "yern"."permission" AS ENUM (
  'AUTHORIZE',
  'DELETE',
  'UPDATE',
  'GET'
);

CREATE TYPE "yern"."storage_provider" AS ENUM (
  'gcs'
);

CREATE TABLE "yern"."users" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "email" text UNIQUE NOT NULL,
  "first_name" text NOT NULL,
  "last_name" text NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."user_roles" (
  "user_id" bigint NOT NULL,
  "role_id" bigint NOT NULL
);

CREATE TABLE "yern"."user_authentications" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "username" text NOT NULL,
  "password" text NOT NULL
);

CREATE TABLE "yern"."roles" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "resource" yern.resource_type UNIQUE NOT NULL,
  "type" yern.role_type UNIQUE NOT NULL,
  "display_name" varchar UNIQUE NOT NULL
);

CREATE TABLE "yern"."roles_permissions" (
  "role_id" bigint NOT NULL,
  "permission" yern.permission NOT NULL,
  PRIMARY KEY ("role_id", "permission")
);

CREATE TABLE "yern"."projects" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "description" text NOT NULL,
  "start_date" timestamp NOT NULL,
  "goal_end_date" timestamp NOT NULL,
  "actual_end_date" timestamp NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."patterns" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "description" text NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."counters" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY NOT NULL,
  "value" bigint NOT NULL DEFAULT 0,
  "is_dirty" bool NOT NULL DEFAULT false,
  "last_reset_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."counter_logs" (
  "id" uuid PRIMARY KEY NOT NULL DEFAULT (gen_random_uuid()),
  "counter_id" bigint NOT NULL,
  "external_id" text UNIQUE NOT NULL,
  "value" integer NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."users_patterns" (
  "user_id" bigint NOT NULL,
  "pattern_id" bigint NOT NULL,
  PRIMARY KEY ("user_id", "pattern_id")
);

CREATE TABLE "yern"."sections" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "pattern_id" bigint NOT NULL,
  "name" text NOT NULL,
  "notes" text,
  "sequence" integer NOT NULL,
  "file_id" bigint,
  "counter_id" bigint,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."files" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "storage_provider" storage_provider NOT NULL,
  "raw_path" text NOT NULL,
  "formatted_path" text,
  "public_url" text,
  "etag" text,
  "error" jsonb,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."file_access_control" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "user_id" bigint NOT NULL,
  "file_id" bigint NOT NULL,
  "role_id" bigint NOT NULL,
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "yern"."yarn" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "brand_id" integer NOT NULL,
  "manufacturer_id" integer NOT NULL,
  "material_id" integer NOT NULL,
  "color" bytea,
  "lot_number" text,
  "length_in_meters" float NOT NULL,
  "weight_in_grams" float NOT NULL,
  "thickness_id" integer NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."materials" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "description" text NOT NULL,
  "fiber_id" bigint NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."thicknesses" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "weight_number" integer NOT NULL,
  "name" text NOT NULL,
  "description" text NOT NULL,
  "circumference" float NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."brands" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "description" text NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."manufacturers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "description" text NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

CREATE TABLE "yern"."fibers" (
  "id" BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" text NOT NULL,
  "identifier" text NOT NULL,
  "created_at" timestamp DEFAULT (now()),
  "updated_at" timestamp DEFAULT (now())
);

ALTER TABLE "yern"."user_roles" ADD FOREIGN KEY ("user_id") REFERENCES "yern"."users" ("id");

ALTER TABLE "yern"."user_roles" ADD FOREIGN KEY ("role_id") REFERENCES "yern"."roles" ("id");

ALTER TABLE "yern"."user_authentications" ADD FOREIGN KEY ("user_id") REFERENCES "yern"."users" ("id");

ALTER TABLE "yern"."roles_permissions" ADD FOREIGN KEY ("role_id") REFERENCES "yern"."roles" ("id");

ALTER TABLE "yern"."projects" ADD FOREIGN KEY ("user_id") REFERENCES "yern"."users" ("id");

ALTER TABLE "yern"."counter_logs" ADD FOREIGN KEY ("counter_id") REFERENCES "yern"."counters" ("id");

ALTER TABLE "yern"."users_patterns" ADD FOREIGN KEY ("user_id") REFERENCES "yern"."users" ("id");

ALTER TABLE "yern"."users_patterns" ADD FOREIGN KEY ("pattern_id") REFERENCES "yern"."patterns" ("id");

ALTER TABLE "yern"."sections" ADD FOREIGN KEY ("pattern_id") REFERENCES "yern"."patterns" ("id");

ALTER TABLE "yern"."sections" ADD FOREIGN KEY ("counter_id") REFERENCES "yern"."counters" ("id");

ALTER TABLE "yern"."file_access_control" ADD FOREIGN KEY ("user_id") REFERENCES "yern"."users" ("id");

ALTER TABLE "yern"."file_access_control" ADD FOREIGN KEY ("file_id") REFERENCES "yern"."files" ("id");

ALTER TABLE "yern"."file_access_control" ADD FOREIGN KEY ("role_id") REFERENCES "yern"."roles" ("id");

ALTER TABLE "yern"."yarn" ADD FOREIGN KEY ("brand_id") REFERENCES "yern"."brands" ("id");

ALTER TABLE "yern"."yarn" ADD FOREIGN KEY ("manufacturer_id") REFERENCES "yern"."manufacturers" ("id");

ALTER TABLE "yern"."yarn" ADD FOREIGN KEY ("material_id") REFERENCES "yern"."materials" ("id");

ALTER TABLE "yern"."yarn" ADD FOREIGN KEY ("thickness_id") REFERENCES "yern"."thicknesses" ("id");

ALTER TABLE "yern"."materials" ADD FOREIGN KEY ("fiber_id") REFERENCES "yern"."fibers" ("id");
