// Docs: https://dbml.dbdiagram.io/docs
// Schema file that you can plug into the above 
// website for better viewing. 
// 
// This will define the schema for the beginning 
// db for this project. 
// 
// To start, we'll use Postgres, and this single 
// file will contain the entire schema. As the 
// number of tables and relationships increases, 
// we may break this out into different files 
// based on either functionality or relationships.

// There will be a script that can run with each 
// commit to any of the files to build a full schema 
// and commit automatically to main once the PR goes in. 

// TODO: 
//  * think about indexes 
//      * users 
//          * email
// * think about many-to-many table for fiber_blends
// * think about "create if not exists" for tables 
// * think anbout adding triggers

// Table TODOs: 

/////////////////////////////////////////////////
/////////////////////////////////////////////////
///////////Users and Related Tables//////////////
/////////////////////////////////////////////////
/////////////////////////////////////////////////
Table yern.users {
  id bigint [pk, increment]
  email text [unique, not null]
  first_name text [not null]
  last_name text [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table yern.user_roles {
    user_id bigint [not null] 
    role_id bigint [not null]
}
ref: yern.user_roles.user_id > yern.users.id
ref: yern.user_roles.role_id > yern.roles.id

Table yern.user_authentications {
	id bigint [pk, increment]
	user_id bigint [not null] 
	username text [not null]
	password text [not null]
}
ref: yern.user_authentications.user_id > yern.users.id

Table yern.roles {
  id bigint [pk, increment]
  resource yern.resource_type [unique, not null]
  type yern.role_type [unique, not null]
  display_name varchar [unique, not null]
}

Enum yern.resource_type {
  SECTION
  FILE 
  PATTERN
}

Enum yern.role_type {
  OWNER 
  EDITOR 
  READER 
}

Enum yern.permission {
  AUTHORIZE 
  DELETE 
  UPDATE 
  GET 
}

Table yern.roles_permissions {
  role_id bigint [pk, not null]
  permission "yern".permission [pk, not null]
}
ref: yern.roles_permissions.role_id > yern.roles.id 

/////////////////////////////////////////////////
/////////////////////////////////////////////////
/////Projects, Patterns, Sections, Files ////////
/////////////////////////////////////////////////
/////////////////////////////////////////////////
Table yern.projects {
  id bigint [pk, increment]
  user_id bigint [not null]
  description text [not null]
  start_date timestamp [not null]
  goal_end_date timestamp [not null]
  actual_end_date timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
ref: yern.projects.user_id > yern.users.id

Table yern.patterns {
  id bigint [pk, increment]
  name text [not null]
  description text [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table yern.counters {
  id bigint [pk, increment, not null]
  value bigint [not null, default: 0]
  is_dirty bool [not null, default: false]
  last_reset_at timestamp 
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// TODO: add 'create extension pgcrypto;'
Table yern.counter_logs {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  counter_id bigint [not null]
  external_id text [unique, not null]
  value integer [not null]
  created_at timestamp [not null, default: `now()`]
}
ref: yern.counter_logs.counter_id > yern.counters.id

Table yern.users_patterns {
  user_id bigint [not null]
  pattern_id bigint [not null]

  Indexes {
    (user_id, pattern_id) [pk]
  }
}
ref: yern.users_patterns.user_id > yern.users.id
ref: yern.users_patterns.pattern_id > yern.patterns.id

Table yern.sections {
  id bigint [pk, increment]
  pattern_id bigint [not null]
  name text [not null]
  notes text 
  sequence integer [not null]
  file_id bigint 
  counter_id bigint 
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}
ref: yern.sections.pattern_id > yern.patterns.id
ref: yern.sections.counter_id > yern.counters.id

Enum yern.storage_provider {
  gcs
}

Table yern.files {
  id bigint [pk, increment]
  storage_provider storage_provider [not null]
  raw_path text [not null]
  formatted_path text 
  public_url text
  etag text
  error jsonb
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

// File Owner (Role)
//  - get file (permission)
//  - update file (permission)
//  - delete file (permission)
// File Reader (Role)
//  - get file (permission)
// File Editor (Role)
//  - get file (permission)
//  - update file (permission)

// File Access Controls 
// -- no more than 1 owner for a file 
// -- unique on file_id, user_id, and role_id
// -- only 1 role for 
// id 
// file_id 
// user_id
// role_id
Table yern.file_access_control {
  id bigint [pk, increment]
  user_id bigint [not null]
  file_id bigint [not null]
  role_id bigint [not null]
  updated_at timestamp [not null, default: `now()`]
  created_at timestamp [not null, default: `now()`]
}
ref: yern.file_access_control.user_id > yern.users.id
ref: yern.file_access_control.file_id > yern.files.id
ref: yern.file_access_control.role_id > yern.roles.id

/////////////////////////////////////////////////
/////////////////////////////////////////////////
////////////Yarn and Related Tables//////////////
/////////////////////////////////////////////////
/////////////////////////////////////////////////
Table yern.yarn {
  id bigint [pk, increment]
  // will join to brands table.
  brand_id integer [not null] 
  // will join to manufacturers table.
  manufacturer_id integer [not null]
  // will join to materials table.
  material_id integer [not null]
  color bytea
  // different for each brand, probably just text 
  lot_number text 
  length_in_meters float [not null] 
  // either 
  weight_in_grams float [not null] 
  // will join to the thickness lookup table. 
  thickness_id integer [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}
ref: yern.yarn.brand_id > yern.brands.id
ref: yern.yarn.manufacturer_id > yern.manufacturers.id
ref: yern.yarn.material_id > yern.materials.id
ref: yern.yarn.thickness_id > yern.thicknesses.id


Table yern.materials {
  id bigint [pk, increment]
  name text [not null]
  description text [not null]
  // may need to be an array of fibers 
  // or join to a different table (maybe fiber_blends/blends)
  fiber_id bigint [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}
ref: yern.materials.fiber_id > yern.fibers.id

// measures the circumference of the yarn 
// 0 = lace weight 
// 1 = fingering 
// 2 = sport 
// 3 = double-knitted 
// 4 = worsted 
// 5 = bulky 
// 6 = extra bulky 
// 7 = jumbo
Table yern.thicknesses {
  id bigint [pk, increment]
  // the numbers and descriptions above 
  weight_number integer [not null]
  name text [not null]
  description text [not null]
  circumference float [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table yern.brands {
  id bigint [pk, increment]
  name text [not null]
  identifier text [not null]
  description text [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table yern.manufacturers {
  id bigint [pk, increment]
  name text [not null]
  identifier text [not null]
  description text [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table yern.fibers {
  id bigint [pk, increment]
  name text [not null]
  identifier text [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}